--- a/sass/abstract/_bootstrap-override.scss
+++ b/sass/abstract/_bootstrap-override.scss
@@ -6,6 +6,7 @@ $theme-colors: (
   black: #000,
   gray:#C4C4C4,
   transparent: rgba(0, 0, 0, 0),
+  footer:#878787,
 );
 
 //=========== override default spacing. 0 - 20(100px)=================//
